--- a/index.html
+++ b/index.html
@@ -96,14 +96,15 @@
           <h2>About</h2>
           <p>
             Abhinav Singh currently works as <strong>Software Engineer</strong>
-            in <em>Flipkart India pvt ltd. </em> Previously he worked in <em>Oracle India pvt ltd.</em> He was part of <ins>Database Security Vulnerabilty Test and Tools Development</ins>
+            in <em>Flipkart India pvt ltd</em>. More precisely he is part of <ins>Network logistics </ins> team which processes and serves logistics network data to 
+            75% of ekart and builds framework that makes it possible. </em> Previously he worked in <em>Oracle India pvt ltd.</em> He was part of <ins>Database Security Vulnerabilty Test and Tools Development</ins>
             group responsible to developing automations and framework developemnt for detecting security vulnerabilites.
             <br/> <br/>
             He completed his <strong>B.E.(Hons) in Electircal and Electronics Engineering</strong> from 
             <a href="https://www.bits-pilani.ac.in"><strong>BITS PILANI</strong></a>
             <br/> <br/>
             Abhinav is keen learner who likes to dabble with new technologies and explore
-            new frontier in various technological strides being made.. Abhinav likes to simplify
+            new frontier in various technological strides being made. Abhinav likes to simplify
             tooling and workflows with automations so that data is made more readily accessible to end users.
             Leaving aside the programming stuff, Abhinav likes to play games (especially PS4 exclusives :P) and
             is an avid lover of badminton.
@@ -117,8 +118,8 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Backend Developer</h3>
             <p class="font-italic">
-              Currently working as part backend engineer for DBSec group of Oracle
-              responsible for writing automation framework for software products
+              Currently working as part backend engineer in Flipkart Logistics Master Data Management team
+              which processes, orchestrates and serves the hub-to-hub data to end users and teams
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -145,8 +146,7 @@
             </div>
             <p>
               Abhinav aspires to be full-stack engineer for web based products which enables
-              him to solve problem at grassroots levels and scale them in order to
-              deliver solutions directly to client.
+              him to solve problem at grassroots levels and scale them to support large workloads
             </p>
           </div>
         </div>
@@ -210,10 +210,8 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>Given below enlist where Abhinav stand with my proficiency in various
-            languages. In Addition to that, Abhinav is also experianced in working
-            Python based web frameworks such as Django and Flask; Java based
-            MVC framework SpringBoot; React from Frontend side and Docker from
-            devops side
+            languages. In Addition to that, Abhinav is also experianced in working Java based
+            MVC framework SpringBoot; Have some familiarity with React,
           </p>
         </div>
 
@@ -222,9 +220,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill">HTML <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -236,23 +234,23 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">45%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Perl <i class="val">40%</i></span>
+              <span class="skill">Perl <i class="val">10%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">GIT <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -261,30 +259,30 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">100%</i></span>
+              <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Java <i class="val">80%</i></span>
+              <span class="skill">Java <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">C++ <i class="val">72%</i></span>
+              <span class="skill">C++ <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Shell <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -322,7 +320,7 @@
             <div class="resume-item pb-0">
               <h4>Abhinav Singh</h4>
               <p>
-                <em>Innovative and self-driven software developer with 2+ years of experience in designing and developing
+                <em>Innovative and self-driven software developer with 3+ years of experience in designing and developing
                   automation frameworks with intent of simplifying workflows in complicated developement infrastructure
                 </em>
               </p>
@@ -356,12 +354,41 @@
                 got a distinction medal
               </p>
             </div>
+          <div class="resume-item">
+            <h4>Secondary High School(10th) ISCE Board Of Examination</h4>
+            <h5>2012 - 2014</h5>
+            <p><em>City Montessori School, Gomti Nagar, Lucknow</em></p>
+            <p>
+              Undertook Physics,Chemistry,Maths as the core subjects alongwith Physical Education
+              Computer Sciene,English,Hindi,Geography and History. Scored 92.1% in Boards exam
+            </p>
+          </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Development Engineer</h4>
+              <h5>2021 Mar - Present</h5>
+              <p><em>Flipkart India Pvt. ltd., Bangalore, India </em></p>
+              <ul>
+                <li>
+                  Implemented an end to end <em>slotted pickup system</em> for sellers where sellers can get their item picked up in multiple slots
+                  in a single day instead of single day single slots. Reduced transition time from first mile to <strong>middle mile by 12 hours</strong>
+                </li>
+                <li>
+                  Orchestrated/supported roll-out of Multipickup across <strong>960 ekart hubs in in PAN India</strong>
+                </li>
+                <li>
+                  Designed and implemented bulk processing of over <strong> 1 lac</strong> records of slot capacity 
+                </li>
+                <li>
+                  Automated storage capacity orchestration which was earlier used to be manual process. The TAT of entire process was reduced from
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Member of Techincal Staff</h4>
-              <h5>2018 Aug - Present</h5>
+              <h5>2018 Aug - 2021 Feb</h5>
               <p><em>Oracle India Pvt. ltd., Bangalore, India </em></p>
               <ul>
                 <li>
@@ -385,7 +412,9 @@
                   database with <em>17 Oracle based data type</em> . This helped in expanding the data 
                   discovery from only String based to numeric/float based data type as well
                 </li>
-                <li>Currently part of <strong>Oracle Cryptography Team</strong></li>
+                <li>As part of <strong>Oracle Cryptography team </strong>developed a combination testing framework 
+                  which would test particular key manipulation usecase with n-set of parameters. 
+                </li>
               </ul>
             </div>
             <div class="resume-item">
